# ProteinContactNetworks

./: .gitignore  README.md  config.ini  environment.yml  index.md  pyproject.toml  requirements.txt  setup.cfg  setup.py  setupLinux-MacOSX.sh  setupWindows.bat  thirdpart_softwares_needed.txt
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  bug_report.md
.github/workflows/: python-publish.yml
0.9.0-alpha/: .gitignore  README.txt  REQUIREMENTS.txt  config.ini  create_config_file.py  exctract_chain_try.py  install_libraries.bat  install_libraries.sh  pcn_final.py  pcn_main.py  pcn_pymol_scripts.py  setup.bat  setupLinux-MacOSX.sh  setupLinux.sh  setupWindows.bat  setupmacosX.sh
0.9.1-alpha/: .gitignore  gui_constants.py  pcn_final.py  pcn_gui.py  pcn_gui.spec  pcn_gui_class.py  pcn_main.py  pcn_pymol_scripts.py  setupLinux-MacOSX.sh  setupMacOSX.sh  setupWindows.bat
Outputs/: .gitignore
examples/CentralityAnalysis/: PCN_CentralityAnalysis.ipynb
examples/CentralityAnalysis/.ipynb_checkpoints/: PCN_CentralityAnalysis-checkpoint.ipynb
examples/CentralityAnalysis/Edgelists/: 6vxx_edgelist_4_8.csv
examples/CommunityDetection/: PCN_CommunityDetection.ipynb
examples/CommunityDetection/.ipynb_checkpoints/: PCN_Miner_main-checkpoint.ipynb
examples/Embedding+Clustering/: .gitignore  PCN_EmbeddingClustering.ipynb
examples/Embedding+Clustering/.ipynb_checkpoints/: PCN_EmbeddingClustering-checkpoint.ipynb
examples/SpectralClustering/: PCN_SpectralClustering.ipynb
pcn/: .gitignore
pcn.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
pcn/PCN_Miner.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
pcn/pcn.egg-info/: SOURCES.txt  requires.txt
pcn/pcn_miner/: pcn_miner.py  pcn_pymol_scripts.py
pcn/tools/: pcn_gui_class.py  pcn_gui_main.py  pcn_main.py
src/: .gitignore  install_libraries-MacOSX.sh  pcn_gui_class.py  pcn_gui_main.py  pcn_main.py  pcn_miner.py  pcn_pymol_scripts.py  setup.cfg  setupLinux-MacOSX.sh
src/tools/: .gitignore  create_config_file.py
(+8 files in other folders)
