[metadata]
name = PCN_Miner
version = 1.0.7
author = 'Ugo Lomoio <ugo.lomoio@studenti.unicz.it>, Pietro Hiram Guzzi <hguzzi@unicz.it>'
description = A tool for the analysis of Protein Contact Networks
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/hguzzi/ProteinContactNetworks
project_urls =
    Bug Tracker = https://github.com/hguzzi/ProteinContactNetworks/issues
classifiers =
    Intended Audience :: Science/Research
    Intended Audience :: Developers
    Programming Language :: Python :: 3
    Development Status :: 4 - Beta
    License :: CC0 1.0 Universal (CC0 1.0) Public Domain Dedication
    Operating System :: OS Independent
keywords = ProteinContactNetworks, Allostery, Proteins, CommunityDetection, Embedding, Clustering, SpectralClustering, Graphs

[options]
package_dir =  
	= pcn
packages = find:
python_requires = >=3.8
install_requires = 

	numpy
	future
	matplotlib
	scikit-learn
	tqdm
	networkx>=2.4
	demon
	python-louvain>=0.16
	nf1
	scipy
	pulp
	seaborn
	pandas	
	eva_lcd
	bimlpa
	markov_clustering
	chinese_whispers
	python-igraph
	angel-cd
	pooch
	dynetx
	thresholdclustering
	pyclustering
	cython
	python-Levenshtein
    	regex
	fuzzy-c-means
	cdlib
	pytz
	python-dateutil
	node2vec

[options.packages.find]
where = pcn