[metadata]
name = PCN-Miner
version = 0.9.1
author = Ugo Lomoio
author_email = @example.com
description = A tool for the analysis of Protein Contact Networks
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/hguzzi/ProteinContactNetworks
project_urls =
    Bug Tracker = https://github.com/hguzzi/ProteinContactNetworks/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src